Add meta description, change footer colors

--- a/tracker.html
+++ b/tracker.html
@@ -183,8 +183,8 @@
     <img class="cup" src="img/yellowcup.png" alt="cartoon cup with coffee">
 
   </main>
-  <footer>
-    <h6>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</h6>
+  <footer class="dark-footer">
+    <p>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</h6>
   </footer>
   <script src="js/main.js"></script>
 </body>
