--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Hannah Yi, Grace Suyama, Kayla Doan, Athena Le">
+  <meta name="description" content="Website to explore different coffee drinks and connect with the coffee community using an explore, quiz, tracker, and account features">
   <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap&family=Material+Icons" rel="stylesheet">
   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
   <link rel="icon" href="img/favicon.png" type="image/png">
