--- a/quiz.html
+++ b/quiz.html
@@ -78,7 +78,7 @@
 
   </main>
 
-  <footer>
+  <footer class="dark-footer">
     <p>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</p>
   </footer>
   <script src="js/main.js"></script>
