--- a/tracker.html
+++ b/tracker.html
@@ -180,7 +180,7 @@
 
     </div>
 
-    <img class="cup" src="img/yellowcup.png" alt="cartoon cup with coffee">
+    <img class="t-cup" src="img/yellowcup.png" alt="cartoon cup with coffee">
 
   </main>
   <footer>
