--- a/tracker2.html
+++ b/tracker2.html
@@ -109,7 +109,7 @@
 </main>
 
 <footer>
-  <h6>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</h6>
+  <p>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</p>
 </footer>
 <script src="js/main.js"></script> 
 </body>
