--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
           </li>
 
           <li class="nav__item">
-            <a href="orders.html" class="nav__link">Custom Orders</a>
+            <a href="explore.html" class="nav__link">Explore</a>
           </li>
 
           <li class="nav__item">
-            <a href="new-tracker.html" class="nav__link">Tracker</a>
+            <a href="tracker.html" class="nav__link">Tracker</a>
           </li>
 
           <li class="nav__item">
