--- a/tracker.html
+++ b/tracker.html
@@ -25,7 +25,7 @@
                     </li>
     
                     <li class="nav__item">
-                        <a href="orders.html" class="nav__link">Custom Orders</a>
+                        <a href="explore.html" class="nav__link">Explore</a>
                     </li>
     
                     <li class="nav__item">
