--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
   <!-- Main -->
   <main class="main">
     <!-- Section 1:Home -->
-    <div id="section1">
-      <section class="home" id="home">
+    <div class="section1">
+      <section class="home">
         <div class="home-text">
           <p>EXPLORE THE WORLD OF COFFEE</p>
           <h1>Start Exploring <br> Personalized Coffee</h1>
@@ -76,8 +76,8 @@
     </div>
 
     <!-- Section 2:Custom orders -->
-    <div id="section2">
-      <section class="orders" id="orders">
+    <div class="section2">
+      <section class="orders">
         <div class="heading">
           <h1>Share Custom Orders</h1>
         </div>
@@ -85,8 +85,8 @@
     </div>
 
     <!-- Section 3:Tracker -->
-    <div id="section3">
-      <section class="tracker" id="tracker">
+    <div class="section3">
+      <section class="tracker">
         <div class="heading">
           <h1>Track Your Drinks</h1>
         </div>
@@ -94,8 +94,8 @@
     </div>
 
     <!-- Section 4:Quiz -->
-    <div id="section4">
-      <section class="quiz" id="quiz">
+    <div class="section4">
+      <section class="quiz">
         <div class="quiz-text">
           <h1>Want to try something new?<br>Take our Coffee Quiz!</h1>
         </div>
