css changes for tracker

--- a/tracker.html
+++ b/tracker.html
@@ -64,7 +64,10 @@
     </div>
     
     <!-- container -->
+    <img class="t-cup" src="img/yellowcup.png" alt="cartoon cup with coffee">
+    
     <div class="logging"> 
+
         <!-- drink type -->
         <div class="tracker"> 
             <label for="name">Name of Drink</label>
@@ -174,13 +177,19 @@
               <option value="150">150% - more sugar</option>
             </select>
         </div>
-        <div class="button">
+
+        <div class="uploadImg"> 
+            <label for="photo">Add Photo of Your Drink</label>
+            <div> 
+                <input type="file" id="photo" name="photo" accept="image/*">
+            </div>
+        </div>
+
+        <div class="tracker-buttons">
             <button class="secondary-button">Log Drink</button>
         </div>
 
     </div>
-
-    <img class="t-cup" src="img/yellowcup.png" alt="cartoon cup with coffee">
 
   </main>
   <footer class="dark-footer">
