--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- going to get replaced -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- should reference our own favicon -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <!-- put our own description -->
     <meta
       name="description"
       content="Web site created using create-react-app"
