Change order images to cards

--- a/project-draft/explore.html
+++ b/project-draft/explore.html
@@ -59,27 +59,27 @@
         <div class="custom-drinks">
             <div>
                 <!-- Post 1 -->
-                <div>
+                <div class="card">
                   <img src="img/icedcoffee.jpg" alt="iced coffee">
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, laborum.</p>
                 </div>
                 <!-- Post 2 -->
-                <div>
+                <div class="card">
                   <img src="img/mintcoldbrew.jpg" alt="mint cold brew">
                   <p>Doloremque commodi unde eaque! Et natus dolorum corrupti ut numquam.</p>
                 </div>
                 <!-- Post 3 -->
-                <div>
+                <div class="card">
                   <img src="img/milkyespresso.jpg" alt="milky espresso">
                   <p>Odio praesentium cum nemo nesciunt architecto, quam voluptate porro inventore.</p>
                 </div>
                 <!-- Post 4 -->
-                <div>
+                <div class="card">
                   <img src="img/dairyfreemocha.jpg" alt="dairy free mocha">
                   <p>Dignissimos consequuntur maxime harum debitis ratione, culpa iure pariatur quaerat?</p>
                 </div>
                 <!-- Post 5 -->
-                <div>
+                <div class="card">
                   <img src="img/pumpkinblend.jpg" alt="pumpkin blend">
                   <p>Odit id earum commodi tempora voluptatum mollitia dolorum, perspiciatis nulla!</p>
                 </div>
