navigation of tracker

--- a/project-draft/tracker.html
+++ b/project-draft/tracker.html
@@ -54,6 +54,7 @@
     <h1 class="trackHeader">Log Your Caffeine</h1>
     
     <!-- secondary navigation bar for tracker pages -->
+    <!-- how to collapse this with smaller screen? -->
     <div class="tracker-nav"> 
             <div class = "tracker-buttons">
                 <div class="t-button"><li class="content-navi"><a href="tracker.html">Track Coffee</a></li></div>
