Change the quiz.html to have correct nav bar, work on the navigation component

--- a/project-draft/quiz.html
+++ b/project-draft/quiz.html
@@ -16,13 +16,13 @@
 
 <body class="quiz-page">
   <!-- Header -->
-  <header class="header" id="header">
+  <header class="header">
     <nav class="nav container">
-      <a href="#" class="nav__logo">
+      <a href="index.html" class="nav__logo">
         <i class="ri-cup-line"></i> BrewLab
       </a>
 
-      <div class="nav__menu" id="nav-menu">
+      <div class="nav__menu">
         <ul class="nav__list">
           <li class="nav__item">
             <a href="index.html" class="nav__link">Home</a>
@@ -41,17 +41,20 @@
           </li>
         </ul>
 
-        <a href="account.html" class="nav__button">Account</a>
+        <a href="account.html" class="nav__button">Login</a>
 
-        <div class="'nav__close" id="nav-close">
+        <div class="nav__close">
           <i class="ri-close-line"></i>
         </div>
       </div>
 
-      <div class="'toggle" id="nav-toggle">
+      <div class="'toggle">
         <i class="ri-menu-line"></i>
       </div>
     </nav>
+    <div>
+
+    </div>
   </header>
 
   <main>
