--- a/project-draft/index.html
+++ b/project-draft/index.html
@@ -98,6 +98,10 @@
       <section class="quiz">
         <div class="quiz-text">
           <h1>Want to try something new?<br>Take our Coffee Quiz!</h1>
+          <a href="quiz.html" class="quiz-btn">Take Quiz</a>
+        </div>
+        <div class="home-img">
+          <img src="img/yellowcup.png" alt="a yellow cup with coffee">
         </div>
       </section>
     </div>
