--- a/project-draft/explore.html
+++ b/project-draft/explore.html
@@ -57,33 +57,53 @@
     <main>
         <h1 class="custom-orders">Custom Orders</h1>
         <div class="custom-drinks">
-            <div>
+            <div class="flex-box">
                 <!-- Post 1 -->
                 <div class="card">
-                  <img src="img/icedcoffee.jpg" alt="iced coffee">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, laborum.</p>
+                    <div class="card-img">
+                        <img src="img/icedcoffee.jpg" alt="iced coffee">
+                    </div>
+                    <div class="card-description">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, laborum.</p>
+                    </div>
                 </div>
                 <!-- Post 2 -->
                 <div class="card">
-                  <img src="img/mintcoldbrew.jpg" alt="mint cold brew">
-                  <p>Doloremque commodi unde eaque! Et natus dolorum corrupti ut numquam.</p>
+                    <div class="card-img">
+                        <img src="img/mintcoldbrew.jpg" alt="mint cold brew">
+                    </div>  
+                    <div class="card-description">
+                        <p>Doloremque commodi unde eaque! Et natus dolorum corrupti ut numquam.</p>
+                    </div>
                 </div>
                 <!-- Post 3 -->
                 <div class="card">
-                  <img src="img/milkyespresso.jpg" alt="milky espresso">
-                  <p>Odio praesentium cum nemo nesciunt architecto, quam voluptate porro inventore.</p>
+                    <div class="card-img">
+                        <img src="img/milkyespresso.jpg" alt="milky espresso">
+                    </div>
+                    <div class="card-description">
+                        <p>Odio praesentium cum nemo nesciunt architecto, quam voluptate porro inventore.</p>
+                    </div>
                 </div>
                 <!-- Post 4 -->
                 <div class="card">
-                  <img src="img/dairyfreemocha.jpg" alt="dairy free mocha">
-                  <p>Dignissimos consequuntur maxime harum debitis ratione, culpa iure pariatur quaerat?</p>
+                    <div class="card-img">
+                        <img src="img/dairyfreemocha.jpg" alt="dairy free mocha">
+                    </div>
+                    <div class="card-description">
+                        <p>Dignissimos consequuntur maxime harum debitis ratione, culpa iure pariatur quaerat?</p>
+                    </div>
                 </div>
                 <!-- Post 5 -->
                 <div class="card">
-                  <img src="img/pumpkinblend.jpg" alt="pumpkin blend">
-                  <p>Odit id earum commodi tempora voluptatum mollitia dolorum, perspiciatis nulla!</p>
+                    <div class="card-img">
+                        <img src="img/pumpkinblend.jpg" alt="pumpkin blend">
+                    </div>
+                    <div class="card-description">
+                        <p>Odit id earum commodi tempora voluptatum mollitia dolorum, perspiciatis nulla!</p>
+                    </div>
                 </div>
-              </div>
+            </div>
         </div>
     </main>
 
