--- a/project-draft/cardcode.html
+++ b/project-draft/cardcode.html
@@ -6,41 +6,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Your Favorited Drinks</title>
   <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/cardcode.css">
 </head>
 
 <body>
     <main> 
         <!-- my style -->
-        <div class="information [ card ]">
-            <div class="main-content"> 
-            <img class="hero-image" src="https://picsum.photos/id/1011/800/450" alt="" />
-            <span class="tag">Type of Coffee</span>
-            <h2 class="title">Coffee Name from Person</h2>
-            <p class="info">List description of the coffee drink?</p>
-            <button class="button">
-                <span>Expand</span>
-                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="none">
-                    <path d="M0 0h24v24H0V0z" fill="none" />
-                    <path d="M16.01 11H4v2h12.01v3L20 12l-3.99-4v3z" fill="currentColor" />
-                </svg>
-            </button>
-            </div>
-            <div class="card-attribute">
-                <img src="https://i.postimg.cc/SQBzNQf1/image-avatar.png" alt="avatar" class="small-avatar"/>
-                <p>Creation of <span><a href="#">Jules Wyvern</a></span></p>
-            </div>
+        <div>
+          <div class="information [ card ]">
+              <div class="main-content"> 
+              <img class="hero-image" src="https://picsum.photos/id/1011/800/450" alt="" />
+              <h2 class="title">Coffee Name</h2>
+              <div class="tags">
+                <span class="tag">Type of Coffee</span>
+                <span class="tag">Cold Temp</span>
+                <span class="tag">Hot Temp</span>
+                <span class="tag">Coffee Amount</span>
+                <span class="tag">Milk Used</span>
+                <span class="tag">Sweetness</span>
+                </div>
+              </div>
+              <div class="card-attribute">
+                  <img src="https://i.postimg.cc/SQBzNQf1/image-avatar.png" alt="avatar" class="small-avatar"/>
+                  <!-- href goes to the person's account -->
+                  <p>Creation of <span><a href="#">Jules Wyvern</a></span></p>
+              </div>
 
-            <!-- <dl class="details">
-                <div>
-                    <dt>Satisfaction</dt>
-                    <dd>100%</dd>
-                </div>
-                <div>
-                    <dt>Customers</dt>
-                    <dd>4.5K</dd>
-                </div>
-            </dl> -->
+              <!-- <dl class="details">
+                  <div>
+                      <dt>Satisfaction</dt>
+                      <dd>100%</dd>
+                  </div>
+                  <div>
+                      <dt>Customers</dt>
+                      <dd>4.5K</dd>
+                  </div>
+              </dl> -->
+          </div>
         </div>
 
         <div class="card-container">
@@ -66,21 +68,7 @@
               <p>Creation of <span><a href="#">Jules Wyvern</a></span></p>
             </div>
           </div>
-      </div>
-
-
-        <article class="information [ card ]">
-            <span class="tag">Feature</span>
-            <h2 class="title">Never miss your important meetings</h2>
-            <p class="info">Elemenatary tracks all the events for the day as you scheduled and you will never have to worry.</p>
-            <button class="button">
-                <span>Learn more</span>
-                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="none">
-                    <path d="M0 0h24v24H0V0z" fill="none" />
-                    <path d="M16.01 11H4v2h12.01v3L20 12l-3.99-4v3z" fill="currentColor" />
-                </svg>
-            </button>
-        </article>
+        </div>
 
         <!-- tag code -->
         <!-- CSS CODE TAG
@@ -208,82 +196,6 @@
                 </div>
               </div>
           </div>
-
-          <!-- version 3 -->
-        
-          <div class="cards">
-
-            <article class="information [ card ]">
-                <span class="tag">Feature</span>
-                <h2 class="title">Never miss your important meetings</h2>
-                <p class="info">Elemenatary tracks all the events for the day as you scheduled and you will never have to worry.</p>
-                <button class="button">
-                    <span>Learn more</span>
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="none">
-                        <path d="M0 0h24v24H0V0z" fill="none" />
-                        <path d="M16.01 11H4v2h12.01v3L20 12l-3.99-4v3z" fill="currentColor" />
-                    </svg>
-                </button>
-            </article>
-            <article class="plan [ card ]">
-                <div class="inner">
-        
-                    <span class="pricing">
-                        <span>
-                            $56 <small>/ m</small>
-                        </span>
-                    </span>
-                    <h2 class="title">Professional</h2>
-                    <p class="info">This plan is for those who have a team already and running a large business.</p>
-                    <ul class="features">
-                        <li>
-                            <span class="icon">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
-                                    <path fill="none" d="M0 0h24v24H0z" />
-                                    <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
-                                </svg>
-                            </span>
-                            <span><strong>20</strong> team members</span>
-                        </li>
-                        <li>
-                            <span class="icon">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
-                                    <path fill="none" d="M0 0h24v24H0z" />
-                                    <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
-                                </svg>
-                            </span>
-                            <span>Plan <strong>team meetings</strong></span>
-                        </li>
-                        <li>
-                            <span class="icon">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
-                                    <path fill="none" d="M0 0h24v24H0z" />
-                                    <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
-                                </svg>
-                            </span>
-                            <span>File sharing</span>
-                        </li>
-                    </ul>
-                    <button class="button">
-                        Choose plan
-                    </button>
-                </div>
-            </article>
-            <article class="information [ card ]">
-                <h2 class="title">The only tool you need to schedule your day</h2>
-                <p class="info">Always keep updated with this simple tool on the go, when and where ever you need.</p>
-                <dl class="details">
-                    <div>
-                        <dt>Satisfaction</dt>
-                        <dd>100%</dd>
-                    </div>
-                    <div>
-                        <dt>Customers</dt>
-                        <dd>4.5K</dd>
-                    </div>
-                </dl>
-            </article>
-        </div>
 
     </main>
 
