--- a/project-draft/explore.html
+++ b/project-draft/explore.html
@@ -16,13 +16,13 @@
 
 <body>
     <!-- Header -->
-    <header class="header" id="header">
+    <header class="header" class="header">
         <nav class="nav container">
             <a href="#" class="nav__logo">
                 <i class="ri-cup-line"></i> BrewLab
             </a>
 
-            <div class="nav__menu" id="nav-menu">
+            <div class="nav__menu" class="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item">
                         <a href="index.html" class="nav__link">Home</a>
@@ -43,12 +43,12 @@
 
                 <a href="account.html" class="nav__button">Account</a>
 
-                <div class="'nav__close" id="nav-close">
+                <div class="'nav__close" class="nav-close">
                     <i class="ri-close-line"></i>
                 </div>
             </div>
 
-            <div class="'toggle" id="nav-toggle">
+            <div class="'toggle" class="nav-toggle">
                 <i class="ri-menu-line"></i>
             </div>
         </nav>
