Work on quiz.js and fix more of the css, move head of html from project draft to public index.html

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="quiz-height">
   <head>
     <meta charset="utf-8" />
     <!-- should reference our own favicon -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="img/favicon.png" type="image/png">
+    
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="author" content="Hannah Yi, Grace Suyama, Kayla Doan, Athena Le">
     <meta name="theme-color" content="#000000" />
 
     <!-- put our own description -->
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Website to explore different coffee drinks and connect with the coffee community using an explore, quiz, tracker, and account features">
+
+    <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap&family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css" crossorigin="">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Coffee Main Page</title>
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -27,11 +32,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
   </head>
-  <body>
+  <body class="quiz-height">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="quiz-height"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
