Close all the html tags in index.html public

--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,16 @@
     <link rel="icon" href="img/favicon.png" type="image/png">
     
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="author" content="Hannah Yi, Grace Suyama, Kayla Doan, Athena Le">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta name="author" content="Hannah Yi, Grace Suyama, Kayla Doan, Athena Le"/>
     <meta name="theme-color" content="#000000" />
 
     <!-- put our own description -->
-    <meta name="description" content="Website to explore different coffee drinks and connect with the coffee community using an explore, quiz, tracker, and account features">
+    <meta name="description" content="Website to explore different coffee drinks and connect with the coffee community using an explore, quiz, tracker, and account features"/>
 
-    <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap&family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css" crossorigin="">
-    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap&family=Material+Icons" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css" crossorigin=""/>
+    <link rel="stylesheet" href="css/style.css"/>
     <title>Coffee Main Page</title>
 
     <!--
