Fix quiz page so footer doesn't expand when there's few answers

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="quiz-height">
+<html lang="en">
   <head>
     <meta charset="utf-8"/>
     <!-- should reference our own favicon -->
@@ -33,9 +33,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   </head>
-  <body class="quiz-height">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="quiz-height"></div>
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
