add interactivity to account

--- a/project-draft/account.html
+++ b/project-draft/account.html
@@ -73,13 +73,13 @@
     </div>
 
     <div class="flex-box">
-      <div class="posts-title profile-content">
+      <div class="account-tabs profile-content">
         <h2> Posts </h2>
       </div>
-      <div class="saved-drinks profile-content">
+      <div class="account-tabs profile-content">
         <h2> Saved </h2>
       </div>
-      <div class="tried-drinks profile-content">
+      <div class="account-tabs profile-content">
         <h2> Tasted </h2>
       </div>
     </div>
