--- a/project-draft/quiz-results.html
+++ b/project-draft/quiz-results.html
@@ -13,3 +13,92 @@ JS
 - Same heading (will just import the navigation bar)
 - Get the cards by importing from the explore.js
  -->
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap&family=Material+Icons" rel="stylesheet">
+  <link rel="icon" href="img/favicon.png" type="image/png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css" crossorigin="">
+
+  <link rel="stylesheet" href="css/style.css">
+  <title>Coffee Quiz Results Page</title>
+</head>
+
+<body class="quiz-page">
+  <!-- Header -->
+  <header class="header">
+    <nav class="nav container">
+      <a href="index.html" class="nav__logo">
+        <i class="ri-cup-line"></i> BrewLab
+      </a>
+
+      <div class="nav__menu">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="index.html" class="nav__link">Home</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="explore.html" class="nav__link">Explore</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="tracker.html" class="nav__link">Tracker</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="quiz.html" class="nav__link">Quiz</a>
+          </li>
+        </ul>
+
+        <a href="account.html" class="nav__button">Login</a>
+
+        <div class="nav__close">
+          <i class="ri-close-line"></i>
+        </div>
+      </div>
+
+      <div class="'toggle">
+        <i class="ri-menu-line"></i>
+      </div>
+    </nav>
+    <div>
+
+    </div>
+  </header>
+
+  <main>
+    <h1 class="quiz-header">Quiz Results</h1>
+    <section class="question">
+      <!-- <p>Question #/##</p>
+      <p>What generally is your favorite coffee roast?</p> -->
+    </section>
+
+    <!-- <section class="options">
+      <div>
+        <p>Light</p>
+        <p>Medium</p>
+        <p>Medium-dark</p>
+        <p>Dark</p>
+        <p>No preference</p>
+      </div>
+    </section> -->
+
+    <section class="buttons">
+      <div class="primary-button">Previous</div>
+      <div class="primary-button">Next</div>
+    </section>
+
+  </main>
+
+  <footer class="dark-footer">
+    <p>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</p>
+  </footer>
+  <script src="js/main.js"></script>
+</body>
+
+</html>
