Edit nav.js and work on the result page of quiz.js

--- a/project-draft/quiz-results.html
+++ b/project-draft/quiz-results.html
@@ -95,7 +95,7 @@ JS
 
   </main>
 
-  <footer class="dark-footer">
+  <footer>
     <p>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</p>
   </footer>
   <script src="js/main.js"></script>
