Work on quiz.js for questions and results page

--- a/project-draft/quiz-results.html
+++ b/project-draft/quiz-results.html
@@ -73,24 +73,43 @@ JS
 
   <main>
     <h1 class="quiz-header">Quiz Results</h1>
-    <section class="question">
-      <!-- <p>Question #/##</p>
-      <p>What generally is your favorite coffee roast?</p> -->
-    </section>
+    <div class="card">
+        <div>
+            <div class="user-attribute">
+                <img src="/img/profile-picture.jpg" alt="avatar" class="avatar" />
+                <a href="#" class="avatarUsername">@athenalovescoffee</a>
+            </div>
 
-    <!-- <section class="options">
-      <div>
-        <p>Light</p>
-        <p>Medium</p>
-        <p>Medium-dark</p>
-        <p>Dark</p>
-        <p>No preference</p>
-      </div>
-    </section> -->
+            <div>
+                <img class="coffeeimg" src="/img/dairyfreemocha.jpg" alt="coffee with ice" />
+                <h2>Coffee Drink</h2>
+                <p>Short description of the drink</p>
+            </div>
 
-    <section class="buttons">
-      <div class="primary-button">Previous</div>
-      <div class="primary-button">Next</div>
+            <div class="sectionTracker">
+                <h3>Ingredients</h3>
+                <p>[#] shots of [coffee type, e.g. espresso]</p>
+                <p>[ounce] of [milk type]</p>
+                <p>sweetness level</p>
+                <p>volume</p>
+                <p>[type of syrup] syrup</p>
+            </div>
+
+            <div class="sectionTracker">
+                <h3 class="h3tracker">Tags</h3>
+                <span class="tag">Temperature</span>
+                <span class="tag">Milk</span>
+                <span class="tag">Syrup</span>
+            </div>
+        </div>
+
+        <div class="buttons">
+            <button class="primary-button">Add Drink</button>
+            <button class="favbutton">
+                <img class="favicon" src="/img/starv4x.png" alt="star icon" />
+            </button>
+        </div>
+    </div>
     </section>
 
   </main>
